# polymarket-trading

./: .envrc  .gitignore  README.md  pyproject.toml
polymarket/: __init__.py  buy.py  cli.py  liquidity.py  markets.py  merge.py  positions.py  redeem.py  sell.py  utils.py
polymarket/amm/: maths.py
polymarket/gql/: positions.gql
tests/: test_polymarket.py
